[package]
name = "lang_pt"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "A parser tool to generate recursive descent top down parser."
repository = "https://github.com/saikatpaik/lang-pt"   
license = "MIT OR Apache-2.0"
keywords = [
    "parser", 
    "tokenizer",
    "recursive-descent",
    "top-down"
] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    once_cell = "1.16.0"
    regex = "1.5"
    ptree = "0.4.0"

[dev-dependencies]
    serde_json = "1.0.85"

    

# [profile.test] 
#    opt-level = 3    
